--- a/public/breaker_switches.css
+++ b/public/breaker_switches.css
@@ -5,6 +5,7 @@
   margin: auto;
   width: 50%;
   overflow: auto;
+  user-select: none;
 }
 
 .subDiv1 {
@@ -89,6 +90,7 @@
 
 .circuitTitleHeaders {
   background-color: orange;
+  border-radius: 2px;
 }
 
 #circuitLiving {
